--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -60,12 +60,13 @@
                             <a href="javascript:void(0)"  style="color: #00838F !important;" routerLink="/">SPACE DESIGNE</a>
                         </li>
                     </ul>-->
-                </li>
-
+                </li> 
+                
                 <li class="has-submenu">
                     <a href="javascript:void(0)" (click)="onMenuClick($event)">PRODUCTS</a><span class="menu-arrow"></span>
-                    <ul class="submenu megamenu">
+                    <ul class="submenu megamenu" style="background-color: #918d8d;">
                       <li>
+                        <div class="contenedor1" style="background-color: #fff8f8 ">
                         <ul>
                           <li class="megamenu-head"  style="color: red !important; ">CASA MATERSANT</li>
                           <li><a class="nav-link-ref" routerLink="/shop-wall">WALL ART</a></li>
@@ -75,34 +76,46 @@
                           <li><a class="nav-link-ref" routerLink="/shop-accesories">CLOTHING + ACCESSORIES</a></li>
                           <li><a class="nav-link-ref" routerLink="/index-upcycle">UPCYCLED</a></li>
                         </ul>
+                      </div>
                       </li>
-          
+
+
                       <li>
+                        <div class="contenedor2" style="background-color: #fff8f8 ">
                         <ul>
                           <li class="megamenu-head"  style="color: #e89f36 !important; "  >MATERIA CURADA</li>
                           <li><a class="nav-link-ref" routerLink="/art-materia">ART</a></li>
                           <li><a class="nav-link-ref" routerLink="/materia-decor"> HOME DECOR</a></li>
                           <li><a class="nav-link-ref" routerLink="/accesories-materia">CLOTHING + ACCESSORIES</a></li>
                         </ul>
+                      </div>
                       </li>
+
                       <li>
+                        <div class="contenedor3" style="background-color: #fff8f8 ">
                         <ul>
                           <li class="megamenu-head"   style="color: #2b2d91 !important; " >PRODUCT DESIGN</li>
                           <li><a class="nav-link-ref" routerLink="/portfolio-grid-two">PORTFOLIO</a></li>
-                          <li><a class="nav-link-ref" routerLink="/portfolio-grid-three">CUSTOME-MADE</a></li>
+                          <li><a class="nav-link-ref" routerLink="/custome-made">CUSTOME-MADE</a></li>
                         </ul>
+                      </div>
                       </li>
                       <li>
+                        <div class="contenedor4" style="background-color: #fff8f8 ">
                         <ul>
                           <li class="megamenu-head"  style="color: #4aac91 !important; " >INTERIOR DESIGN</li>
                           <li><a class="nav-link-ref" routerLink="/portfolio-masonry-two">PORTFOLIO</a></li>
                           <li><a class="nav-link-ref" routerLink="/portfolio-masonry-three">BOOK AN APPOINTMENT</a></li>
                         </ul>
+                      </div>
                       </li>
                       <li>
+                        <div class="contenedor5" style="background-color: #fff8f8 ">
                         <ul>
-                          <li class="megamenu-head" style="color: #051b06 !important; ">CUSTOME MADE</li>
+                          <li> <a class="nav-link-ref" style="color: #051b06 !important ;  " routerLink="/custome-made">CUSTOME MADE</a>
+                             </li>
                         </ul>
+                      </div>
                       </li>
                     </ul>
                   </li>
