--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -64,7 +64,7 @@
                 
                 <li class="has-submenu">
                     <a href="javascript:void(0)" (click)="onMenuClick($event)">PRODUCTS</a><span class="menu-arrow"></span>
-                    <ul class="submenu megamenu" style="background-color: #918d8d;">
+                    <ul class="submenu megamenu" style="background-color: #020202;">
                       <li>
                         <div class="contenedor1" style="background-color: #fff8f8 ">
                         <ul>
