--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -64,9 +64,9 @@
                 
                 <li class="has-submenu">
                     <a href="javascript:void(0)" (click)="onMenuClick($event)">PRODUCTS</a><span class="menu-arrow"></span>
-                    <ul class="submenu megamenu" style="background-color: #020202;">
+                    <ul class="submenu megamenu" style="background-color: #bebebe;">
                       <li>
-                        <div class="contenedor1" style="background-color: #fff8f8 ">
+                        <div class="contenedor1" style="background-color: #ffffff ">
                         <ul>
                           <li class="megamenu-head"  style="color: red !important; ">CASA MATERSANT</li>
                           <li><a class="nav-link-ref" routerLink="/shop-wall">WALL ART</a></li>
@@ -79,9 +79,8 @@
                       </div>
                       </li>
 
-
                       <li>
-                        <div class="contenedor2" style="background-color: #fff8f8 ">
+                        <div class="contenedor2" style="background-color: #ffffff ">
                         <ul>
                           <li class="megamenu-head"  style="color: #e89f36 !important; "  >MATERIA CURADA</li>
                           <li><a class="nav-link-ref" routerLink="/art-materia">ART</a></li>
@@ -92,7 +91,7 @@
                       </li>
 
                       <li>
-                        <div class="contenedor3" style="background-color: #fff8f8 ">
+                        <div class="contenedor3" style="background-color: #ffffff ">
                         <ul>
                           <li class="megamenu-head"   style="color: #2b2d91 !important; " >PRODUCT DESIGN</li>
                           <li><a class="nav-link-ref" routerLink="/portfolio-grid-two">PORTFOLIO</a></li>
@@ -101,7 +100,7 @@
                       </div>
                       </li>
                       <li>
-                        <div class="contenedor4" style="background-color: #fff8f8 ">
+                        <div class="contenedor4" style="background-color: #ffffff ">
                         <ul>
                           <li class="megamenu-head"  style="color: #4aac91 !important; " >INTERIOR DESIGN</li>
                           <li><a class="nav-link-ref" routerLink="/portfolio-masonry-two">PORTFOLIO</a></li>
@@ -110,7 +109,7 @@
                       </div>
                       </li>
                       <li>
-                        <div class="contenedor5" style="background-color: #fff8f8 ">
+                        <div class="contenedor5" style="background-color: #ffffff ">
                         <ul>
                           <li> <a class="nav-link-ref" style="color: #051b06 !important ;  " routerLink="/custome-made">CUSTOME MADE</a>
                              </li>
