--- a/src/app/core/components/shop-product-detail/shop-product-detail.component.html
+++ b/src/app/core/components/shop-product-detail/shop-product-detail.component.html
@@ -83,8 +83,7 @@
                 <div class="card-body content pt-4 p-2">
                   <a routerLink="/shop-product-detail" class="text-dark product-name h6">Branded T-Shirt</a>
                   <div class="d-flex justify-content-between mt-1">
-                    <h6 class="text-muted small fst-italic mb-0 mt-1">$16.00 </h6>
-                    
+                    <h6 class="text-muted small fst-italic mb-0 mt-1">$18.00 </h6>
                   </div>
                 </div>
               </div>
@@ -101,7 +100,8 @@
                 <div class="card-body content pt-4 p-2">
                   <a routerLink="/shop-product-detail" class="text-dark product-name h6">Elegent Watch</a>
                   <div class="d-flex justify-content-between mt-1">
-                    <h6 class="text-muted small fst-italic mb-0 mt-1"></h6>
+                    <h6 class="text-muted small fst-italic mb-0 mt-1">$4.50 
+                    </h6>
                   
                   </div>
                 </div>
